# semantic-file-finder

./: .gitignore  COMPLETED.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  RUN_GUIDE.md  build.sh  index.html  package-lock.json  package.json  start-dev.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
python-workers/: MIGRATION_COMPLETE.md  MIGRATION_TO_USEARCH.md  README.md  embedding_worker.py  indexer_worker.py  indexer_worker_usearch.py  migrate_to_usearch.py  parser_worker.py  requirements.txt  test_usearch.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  python_worker.rs  state.rs
src/components/: ConfigPanel.tsx  IndexStatus.tsx  ResultList.tsx  SearchBox.tsx  WelcomePanel.tsx
