[package]
name = "semantic-file-finder"
version = "0.1.0"
description = "A semantic file search tool powered by AI"
authors = ["Your Name"]
edition = "2021"

[lib]
name = "semantic_file_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
once_cell = "1"
dirs = "5"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
open = "5"

# 文件监控
notify = "6"

# 数据库 (元数据存储)
rusqlite = { version = "0.31", features = ["bundled"] }

# 配置管理
config = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
